syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/przempore/another_tic_tac_toe/tictactoe";

package tictactoe;

service TicTacToeGrpc {
    rpc InitialState(google.protobuf.Empty) returns (Board);
    rpc Turn(Board) returns (Player);
    rpc PossibleActions(Board) returns (Actions);
    rpc Result(BoardWithAction) returns (Board);
    rpc Winner(Board) returns (Player);
    rpc IsTerminal(Board) returns (Terminal);
    rpc Minimax(Board) returns (Action);
}

message Board {
    repeated Row rows = 1;
}

message Row {
    repeated Cell cells = 1;
}

enum State {
    EMPTY = 0;
    X = 1;
    O = 2;
}

message Player {
    State player = 1;
}

message Cell {
    State state = 1;
}

message Actions {
    repeated Action actions = 1;
}

message Action {
    int32 row = 1;
    int32 column = 2;
}

message BoardWithAction {
    Board board = 1;
    Action action = 2;
}

message Terminal {
    bool terminal = 1;
}
